<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#A27BA865"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_quran_reader"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/howToUseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use"
        android:textSize="18sp"
        android:backgroundTint="#727820"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/createBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_book"
        android:textSize="18sp"
        android:backgroundTint="#A0A218"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/contactUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="18sp"
        android:backgroundTint="#DBC91B"
        android:textColor="@android:color/black"
        android:padding="12dp"/>
</LinearLayout>
