<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/dialog_background"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_books"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/bookSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:drawable/edit_text"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/addBookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_book"
            android:textColor="@android:color/white"
            android:backgroundTint="#65B331"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/deleteBookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_book"
            android:textColor="@android:color/white"
            android:backgroundTint="#4CAF50"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/selectDefaultBookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_default_book"
            android:textColor="@android:color/white"
            android:backgroundTint="#197115"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@android:color/white"
            android:backgroundTint="#757575"
            android:padding="12dp"/>
    </LinearLayout>
</LinearLayout>